parserv3.output
Grammar

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_SECUENCIAL cabecera_alg bloque_alg TK_FALGORITMO TK_PUNTO

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal TK_COMENTARIO

    3 bloque_alg: bloque TK_COMENTARIO

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_cte decl_globales
    6              | ε

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | ε

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_cte declaraciones
   13              | declaracion_var declaraciones
   14              | ε

   15 declaracion_tipo: TK_TIPO lista_d_tipo TK_FTIPO TK_SECUENCIAL

   16 declaracion_cte: TK_CONST lista_d_cte TK_FCONST TK_SECUENCIAL

   17 declaracion_var: TK_VAR lista_d_var TK_FVAR TK_SECUENCIAL

   18 lista_d_tipo: TK_IDENTIFICADOR TK_CREACION_TIPO d_tipo TK_SECUENCIAL lista_d_tipo
   19             | ε

   20 d_tipo: TK_TUPLA lista_campos TK_FTUPLA
   21       | TK_TABLA TK_INICIO_ARRAY expresion_t TK_SUBRANGO expresion_t TK_FINAL_ARRAY TK_DE d_tipo
   22       | TK_IDENTIFICADOR
   23       | expresion_t TK_SUBRANGO expresion_t
   24       | TK_REF d_tipo
   25       | TK_TIPOBASE

   26 expresion_t: expresion
   27            | TK_LITERAL_CARACTER

   28 lista_campos: TK_IDENTIFICADOR TK_DEFINICION_TIPO d_tipo TK_SECUENCIAL lista_campos
   29             | ε

   30 lista_d_cte: TK_IDENTIFICADOR TK_CREACION_TIPO TK_LITERAL_BOOLEANO TK_SECUENCIAL lista_d_cte
   31            | TK_IDENTIFICADOR TK_CREACION_TIPO TK_LITERAL_CADENA TK_SECUENCIAL lista_d_cte
   32            | TK_IDENTIFICADOR TK_CREACION_TIPO TK_LITERAL_CARACTER TK_SECUENCIAL lista_d_cte
   33            | TK_IDENTIFICADOR TK_CREACION_TIPO TK_LITERAL_NUMERICO TK_SECUENCIAL lista_d_cte
   34            | ε

   35 lista_d_var: lista_id TK_DEFINICION_TIPO d_tipo TK_SECUENCIAL lista_d_var
   36            | ε

   37 lista_id: TK_IDENTIFICADOR TK_SEPARADOR lista_id
   38         | TK_IDENTIFICADOR

   39 decl_ent_sal: decl_ent
   40             | decl_ent decl_salida
   41             | decl_salida

   42 decl_ent: TK_ENTRADA lista_d_var

   43 decl_salida: TK_SALIDA lista_d_var

   44 expresion: exp_a
   45          | funcion_ll

   46 exp_a: exp_a TK_SUMA exp_a
   47      | exp_a TK_RESTA exp_a
   48      | exp_a TK_PRODUCTO exp_a
   49      | exp_a TK_DIVISION exp_a
   50      | exp_a TK_MODULO exp_a
   51      | exp_a TK_DIV exp_a
   52      | TK_APERTURA_PARENTESIS exp_a TK_CIERRE_PARENTESIS
   53      | operando
   54      | TK_LITERAL_NUMERICO
   55      | TK_RESTA exp_a

   56 exp_b: exp_b TK_Y exp_b
   57      | exp_b TK_O exp_b
   58      | TK_NO exp_b
   59      | operando_b
   60      | TK_VERDADERO
   61      | TK_FALSO
   62      | expresion TK_OPREL expresion
   63      | TK_APERTURA_PARENTESIS exp_b TK_CIERRE_PARENTESIS

   64 operando: TK_IDENTIFICADOR
   65         | operando TK_PUNTO operando
   66         | operando TK_INICIO_ARRAY expresion TK_FINAL_ARRAY
   67         | operando TK_REF

   68 operando_b: TK_IDENTIFICADOR_B

   69 instrucciones: instruccion TK_SECUENCIAL instrucciones
   70              | instruccion

   71 instruccion: TK_CONTINUAR
   72            | asignacion
   73            | alternativa
   74            | iteracion
   75            | accion_ll

   76 asignacion: operando TK_ASIGNACION expresion
   77           | operando TK_ASIGNACION exp_b

   78 alternativa: TK_SI exp_b TK_ENTONCES instrucciones lista_opciones TK_FSI

   79 lista_opciones: TK_SINO exp_b TK_ENTONCES instrucciones lista_opciones
   80               | ε

   81 iteracion: it_cota_fija
   82          | it_cota_exp

   83 it_cota_exp: TK_MIENTRAS exp_b TK_HACER instrucciones TK_FMIENTRAS

   84 it_cota_fija: TK_PARA TK_IDENTIFICADOR TK_ASIGNACION expresion TK_HASTA expresion TK_HACER instrucciones TK_FPARA

   85 accion_d: TK_ACCION a_cabecera bloque TK_FACCION

   86 funcion_d: TK_FUNCION f_cabecera bloque TK_DEV expresion TK_FFUNCION

   87 a_cabecera: TK_IDENTIFICADOR TK_APERTURA_PARENTESIS d_par_form TK_CIERRE_PARENTESIS TK_SECUENCIAL

   88 f_cabecera: TK_IDENTIFICADOR TK_APERTURA_PARENTESIS lista_d_var TK_CIERRE_PARENTESIS TK_DEV d_tipo TK_SECUENCIAL

   89 d_par_form: d_p_form TK_SECUENCIAL d_par_form
   90           | ε

   91 d_p_form: TK_ENTRADA lista_id TK_DEFINICION_TIPO d_tipo
   92         | TK_SALIDA lista_id TK_DEFINICION_TIPO d_tipo
   93         | TK_ENTRADA_SALIDA lista_id TK_DEFINICION_TIPO d_tipo

   94 accion_ll: TK_IDENTIFICADOR TK_APERTURA_PARENTESIS l_ll TK_CIERRE_PARENTESIS

   95 funcion_ll: TK_IDENTIFICADOR TK_APERTURA_PARENTESIS l_ll TK_CIERRE_PARENTESIS

   96 l_ll: expresion TK_SEPARADOR l_ll
   97     | expresion


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TK_ALGORITMO (258) 1
    TK_IDENTIFICADOR (259) 1 18 22 28 30 31 32 33 37 38 64 84 87 88 94 95
    TK_IDENTIFICADOR_B (260) 68
    TK_FALGORITMO (261) 1
    TK_SECUENCIAL (262) 1 15 16 17 18 28 30 31 32 33 35 69 87 88 89
    TK_COMENTARIO (263) 2 3
    TK_TIPO (264) 15
    TK_FTIPO (265) 15
    TK_CONST (266) 16
    TK_FCONST (267) 16
    TK_VAR (268) 17
    TK_FVAR (269) 17
    TK_CREACION_TIPO (270) 18 30 31 32 33
    TK_TUPLA (271) 20
    TK_FTUPLA (272) 20
    TK_TABLA (273) 21
    TK_FINAL_ARRAY (274) 21 66
    TK_DE (275) 21
    TK_SUBRANGO (276) 21 23
    TK_TIPOBASE (277) 25
    TK_LITERAL_CARACTER (278) 27 32
    TK_DEFINICION_TIPO (279) 28 35 91 92 93
    TK_PUNTO (280) 1 65
    TK_INICIO_ARRAY (281) 21 66
    TK_REF (282) 24 67
    TK_ENTRADA (283) 42 91
    TK_SALIDA (284) 43 92
    TK_SEPARADOR (285) 37 96
    TK_SUMA (286) 46
    TK_RESTA (287) 47 55
    TK_MODULO (288) 50
    TK_DIV (289) 51
    TK_PRODUCTO (290) 48
    TK_DIVISION (291) 49
    UMENOS (292)
    TK_LITERAL_NUMERICO (293) 33 54
    TK_OPREL (294) 62
    TK_APERTURA_PARENTESIS (295) 52 63 87 88 94 95
    TK_CIERRE_PARENTESIS (296) 52 63 87 88 94 95
    TK_O (297) 57
    TK_Y (298) 56
    TK_VERDADERO (299) 60
    TK_FALSO (300) 61
    TK_LITERAL_CADENA (301) 31
    TK_LITERAL_BOOLEANO (302) 30
    TK_NO (303) 58
    NEGACION (304)
    TK_CONTINUAR (305) 71
    TK_ASIGNACION (306) 76 77 84
    TK_SI (307) 78
    TK_ENTONCES (308) 78 79
    TK_FSI (309) 78
    TK_SINO (310) 79
    TK_MIENTRAS (311) 83
    TK_HACER (312) 83 84
    TK_FMIENTRAS (313) 83
    TK_PARA (314) 84
    TK_HASTA (315) 84
    TK_FPARA (316) 84
    TK_ACCION (317) 85
    TK_FACCION (318) 85
    TK_FUNCION (319) 86
    TK_DEV (320) 86 88
    TK_FFUNCION (321) 86
    TK_ENTRADA_SALIDA (322) 93


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    desc_algoritmo (69)
        on left: 1
        on right: 0
    cabecera_alg (70)
        on left: 2
        on right: 1
    bloque_alg (71)
        on left: 3
        on right: 1
    decl_globales (72)
        on left: 4 5 6
        on right: 2 4 5
    decl_a_f (73)
        on left: 7 8 9
        on right: 2 7 8
    bloque (74)
        on left: 10
        on right: 3 85 86
    declaraciones (75)
        on left: 11 12 13 14
        on right: 10 11 12 13
    declaracion_tipo (76)
        on left: 15
        on right: 4 11
    declaracion_cte (77)
        on left: 16
        on right: 5 12
    declaracion_var (78)
        on left: 17
        on right: 13
    lista_d_tipo (79)
        on left: 18 19
        on right: 15 18
    d_tipo (80)
        on left: 20 21 22 23 24 25
        on right: 18 21 24 28 35 88 91 92 93
    expresion_t (81)
        on left: 26 27
        on right: 21 23
    lista_campos (82)
        on left: 28 29
        on right: 20 28
    lista_d_cte (83)
        on left: 30 31 32 33 34
        on right: 16 30 31 32 33
    lista_d_var (84)
        on left: 35 36
        on right: 17 35 42 43 88
    lista_id (85)
        on left: 37 38
        on right: 35 37 91 92 93
    decl_ent_sal (86)
        on left: 39 40 41
        on right: 2
    decl_ent (87)
        on left: 42
        on right: 39 40
    decl_salida (88)
        on left: 43
        on right: 40 41
    expresion (89)
        on left: 44 45
        on right: 26 62 66 76 84 86 96 97
    exp_a (90)
        on left: 46 47 48 49 50 51 52 53 54 55
        on right: 44 46 47 48 49 50 51 52 55
    exp_b (91)
        on left: 56 57 58 59 60 61 62 63
        on right: 56 57 58 63 77 78 79 83
    operando (92)
        on left: 64 65 66 67
        on right: 53 65 66 67 76 77
    operando_b (93)
        on left: 68
        on right: 59
    instrucciones (94)
        on left: 69 70
        on right: 10 69 78 79 83 84
    instruccion (95)
        on left: 71 72 73 74 75
        on right: 69 70
    asignacion (96)
        on left: 76 77
        on right: 72
    alternativa (97)
        on left: 78
        on right: 73
    lista_opciones (98)
        on left: 79 80
        on right: 78 79
    iteracion (99)
        on left: 81 82
        on right: 74
    it_cota_exp (100)
        on left: 83
        on right: 82
    it_cota_fija (101)
        on left: 84
        on right: 81
    accion_d (102)
        on left: 85
        on right: 7
    funcion_d (103)
        on left: 86
        on right: 8
    a_cabecera (104)
        on left: 87
        on right: 85
    f_cabecera (105)
        on left: 88
        on right: 86
    d_par_form (106)
        on left: 89 90
        on right: 87 89
    d_p_form (107)
        on left: 91 92 93
        on right: 89
    accion_ll (108)
        on left: 94
        on right: 75
    funcion_ll (109)
        on left: 95
        on right: 45
    l_ll (110)
        on left: 96 97
        on right: 94 95 96


State 0

    0 $accept: • desc_algoritmo $end

    TK_ALGORITMO  shift, and go to state 1

    desc_algoritmo  go to state 2


State 1

    1 desc_algoritmo: TK_ALGORITMO • TK_IDENTIFICADOR TK_SECUENCIAL cabecera_alg bloque_alg TK_FALGORITMO TK_PUNTO

    TK_IDENTIFICADOR  shift, and go to state 3


State 2

    0 $accept: desc_algoritmo • $end

    $end  shift, and go to state 4


State 3

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR • TK_SECUENCIAL cabecera_alg bloque_alg TK_FALGORITMO TK_PUNTO

    TK_SECUENCIAL  shift, and go to state 5


State 4

    0 $accept: desc_algoritmo $end •

    $default  accept


State 5

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_SECUENCIAL • cabecera_alg bloque_alg TK_FALGORITMO TK_PUNTO

    TK_TIPO   shift, and go to state 6
    TK_CONST  shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    cabecera_alg      go to state 8
    decl_globales     go to state 9
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 6

   15 declaracion_tipo: TK_TIPO • lista_d_tipo TK_FTIPO TK_SECUENCIAL

    TK_IDENTIFICADOR  shift, and go to state 12

    $default  reduce using rule 19 (lista_d_tipo)

    lista_d_tipo  go to state 13


State 7

   16 declaracion_cte: TK_CONST • lista_d_cte TK_FCONST TK_SECUENCIAL

    TK_IDENTIFICADOR  shift, and go to state 14

    $default  reduce using rule 34 (lista_d_cte)

    lista_d_cte  go to state 15


State 8

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_SECUENCIAL cabecera_alg • bloque_alg TK_FALGORITMO TK_PUNTO

    TK_TIPO   shift, and go to state 6
    TK_CONST  shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque_alg        go to state 17
    bloque            go to state 18
    declaraciones     go to state 19
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 9

    2 cabecera_alg: decl_globales • decl_a_f decl_ent_sal TK_COMENTARIO

    TK_ACCION   shift, and go to state 23
    TK_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 25
    accion_d   go to state 26
    funcion_d  go to state 27


State 10

    4 decl_globales: declaracion_tipo • decl_globales

    TK_TIPO   shift, and go to state 6
    TK_CONST  shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales     go to state 28
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 11

    5 decl_globales: declaracion_cte • decl_globales

    TK_TIPO   shift, and go to state 6
    TK_CONST  shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales     go to state 29
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 12

   18 lista_d_tipo: TK_IDENTIFICADOR • TK_CREACION_TIPO d_tipo TK_SECUENCIAL lista_d_tipo

    TK_CREACION_TIPO  shift, and go to state 30


State 13

   15 declaracion_tipo: TK_TIPO lista_d_tipo • TK_FTIPO TK_SECUENCIAL

    TK_FTIPO  shift, and go to state 31


State 14

   30 lista_d_cte: TK_IDENTIFICADOR • TK_CREACION_TIPO TK_LITERAL_BOOLEANO TK_SECUENCIAL lista_d_cte
   31            | TK_IDENTIFICADOR • TK_CREACION_TIPO TK_LITERAL_CADENA TK_SECUENCIAL lista_d_cte
   32            | TK_IDENTIFICADOR • TK_CREACION_TIPO TK_LITERAL_CARACTER TK_SECUENCIAL lista_d_cte
   33            | TK_IDENTIFICADOR • TK_CREACION_TIPO TK_LITERAL_NUMERICO TK_SECUENCIAL lista_d_cte

    TK_CREACION_TIPO  shift, and go to state 32


State 15

   16 declaracion_cte: TK_CONST lista_d_cte • TK_FCONST TK_SECUENCIAL

    TK_FCONST  shift, and go to state 33


State 16

   17 declaracion_var: TK_VAR • lista_d_var TK_FVAR TK_SECUENCIAL

    TK_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 36 (lista_d_var)

    lista_d_var  go to state 35
    lista_id     go to state 36


State 17

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_SECUENCIAL cabecera_alg bloque_alg • TK_FALGORITMO TK_PUNTO

    TK_FALGORITMO  shift, and go to state 37


State 18

    3 bloque_alg: bloque • TK_COMENTARIO

    TK_COMENTARIO  shift, and go to state 38


State 19

   10 bloque: declaraciones • instrucciones

    TK_IDENTIFICADOR  shift, and go to state 39
    TK_CONTINUAR      shift, and go to state 40
    TK_SI             shift, and go to state 41
    TK_MIENTRAS       shift, and go to state 42
    TK_PARA           shift, and go to state 43

    operando       go to state 44
    instrucciones  go to state 45
    instruccion    go to state 46
    asignacion     go to state 47
    alternativa    go to state 48
    iteracion      go to state 49
    it_cota_exp    go to state 50
    it_cota_fija   go to state 51
    accion_ll      go to state 52


State 20

   11 declaraciones: declaracion_tipo • declaraciones

    TK_TIPO   shift, and go to state 6
    TK_CONST  shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 53
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 21

   12 declaraciones: declaracion_cte • declaraciones

    TK_TIPO   shift, and go to state 6
    TK_CONST  shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 54
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 22

   13 declaraciones: declaracion_var • declaraciones

    TK_TIPO   shift, and go to state 6
    TK_CONST  shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 55
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 23

   85 accion_d: TK_ACCION • a_cabecera bloque TK_FACCION

    TK_IDENTIFICADOR  shift, and go to state 56

    a_cabecera  go to state 57


State 24

   86 funcion_d: TK_FUNCION • f_cabecera bloque TK_DEV expresion TK_FFUNCION

    TK_IDENTIFICADOR  shift, and go to state 58

    f_cabecera  go to state 59


State 25

    2 cabecera_alg: decl_globales decl_a_f • decl_ent_sal TK_COMENTARIO

    TK_ENTRADA  shift, and go to state 60
    TK_SALIDA   shift, and go to state 61

    decl_ent_sal  go to state 62
    decl_ent      go to state 63
    decl_salida   go to state 64


State 26

    7 decl_a_f: accion_d • decl_a_f

    TK_ACCION   shift, and go to state 23
    TK_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 65
    accion_d   go to state 26
    funcion_d  go to state 27


State 27

    8 decl_a_f: funcion_d • decl_a_f

    TK_ACCION   shift, and go to state 23
    TK_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 66
    accion_d   go to state 26
    funcion_d  go to state 27


State 28

    4 decl_globales: declaracion_tipo decl_globales •

    $default  reduce using rule 4 (decl_globales)


State 29

    5 decl_globales: declaracion_cte decl_globales •

    $default  reduce using rule 5 (decl_globales)


State 30

   18 lista_d_tipo: TK_IDENTIFICADOR TK_CREACION_TIPO • d_tipo TK_SECUENCIAL lista_d_tipo

    TK_IDENTIFICADOR        shift, and go to state 67
    TK_TUPLA                shift, and go to state 68
    TK_TABLA                shift, and go to state 69
    TK_TIPOBASE             shift, and go to state 70
    TK_LITERAL_CARACTER     shift, and go to state 71
    TK_REF                  shift, and go to state 72
    TK_RESTA                shift, and go to state 73
    TK_LITERAL_NUMERICO     shift, and go to state 74
    TK_APERTURA_PARENTESIS  shift, and go to state 75

    d_tipo       go to state 76
    expresion_t  go to state 77
    expresion    go to state 78
    exp_a        go to state 79
    operando     go to state 80
    funcion_ll   go to state 81


State 31

   15 declaracion_tipo: TK_TIPO lista_d_tipo TK_FTIPO • TK_SECUENCIAL

    TK_SECUENCIAL  shift, and go to state 82


State 32

   30 lista_d_cte: TK_IDENTIFICADOR TK_CREACION_TIPO • TK_LITERAL_BOOLEANO TK_SECUENCIAL lista_d_cte
   31            | TK_IDENTIFICADOR TK_CREACION_TIPO • TK_LITERAL_CADENA TK_SECUENCIAL lista_d_cte
   32            | TK_IDENTIFICADOR TK_CREACION_TIPO • TK_LITERAL_CARACTER TK_SECUENCIAL lista_d_cte
   33            | TK_IDENTIFICADOR TK_CREACION_TIPO • TK_LITERAL_NUMERICO TK_SECUENCIAL lista_d_cte

    TK_LITERAL_CARACTER  shift, and go to state 83
    TK_LITERAL_NUMERICO  shift, and go to state 84
    TK_LITERAL_CADENA    shift, and go to state 85
    TK_LITERAL_BOOLEANO  shift, and go to state 86


State 33

   16 declaracion_cte: TK_CONST lista_d_cte TK_FCONST • TK_SECUENCIAL

    TK_SECUENCIAL  shift, and go to state 87


State 34

   37 lista_id: TK_IDENTIFICADOR • TK_SEPARADOR lista_id
   38         | TK_IDENTIFICADOR •

    TK_SEPARADOR  shift, and go to state 88

    $default  reduce using rule 38 (lista_id)


State 35

   17 declaracion_var: TK_VAR lista_d_var • TK_FVAR TK_SECUENCIAL

    TK_FVAR  shift, and go to state 89


State 36

   35 lista_d_var: lista_id • TK_DEFINICION_TIPO d_tipo TK_SECUENCIAL lista_d_var

    TK_DEFINICION_TIPO  shift, and go to state 90


State 37

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_SECUENCIAL cabecera_alg bloque_alg TK_FALGORITMO • TK_PUNTO

    TK_PUNTO  shift, and go to state 91


State 38

    3 bloque_alg: bloque TK_COMENTARIO •

    $default  reduce using rule 3 (bloque_alg)


State 39

   64 operando: TK_IDENTIFICADOR •
   94 accion_ll: TK_IDENTIFICADOR • TK_APERTURA_PARENTESIS l_ll TK_CIERRE_PARENTESIS

    TK_APERTURA_PARENTESIS  shift, and go to state 92

    $default  reduce using rule 64 (operando)


State 40

   71 instruccion: TK_CONTINUAR •

    $default  reduce using rule 71 (instruccion)


State 41

   78 alternativa: TK_SI • exp_b TK_ENTONCES instrucciones lista_opciones TK_FSI

    TK_IDENTIFICADOR        shift, and go to state 93
    TK_IDENTIFICADOR_B      shift, and go to state 94
    TK_RESTA                shift, and go to state 73
    TK_LITERAL_NUMERICO     shift, and go to state 74
    TK_APERTURA_PARENTESIS  shift, and go to state 95
    TK_VERDADERO            shift, and go to state 96
    TK_FALSO                shift, and go to state 97
    TK_NO                   shift, and go to state 98

    expresion   go to state 99
    exp_a       go to state 79
    exp_b       go to state 100
    operando    go to state 80
    operando_b  go to state 101
    funcion_ll  go to state 81


State 42

   83 it_cota_exp: TK_MIENTRAS • exp_b TK_HACER instrucciones TK_FMIENTRAS

    TK_IDENTIFICADOR        shift, and go to state 93
    TK_IDENTIFICADOR_B      shift, and go to state 94
    TK_RESTA                shift, and go to state 73
    TK_LITERAL_NUMERICO     shift, and go to state 74
    TK_APERTURA_PARENTESIS  shift, and go to state 95
    TK_VERDADERO            shift, and go to state 96
    TK_FALSO                shift, and go to state 97
    TK_NO                   shift, and go to state 98

    expresion   go to state 99
    exp_a       go to state 79
    exp_b       go to state 102
    operando    go to state 80
    operando_b  go to state 101
    funcion_ll  go to state 81


State 43

   84 it_cota_fija: TK_PARA • TK_IDENTIFICADOR TK_ASIGNACION expresion TK_HASTA expresion TK_HACER instrucciones TK_FPARA

    TK_IDENTIFICADOR  shift, and go to state 103


State 44

   65 operando: operando • TK_PUNTO operando
   66         | operando • TK_INICIO_ARRAY expresion TK_FINAL_ARRAY
   67         | operando • TK_REF
   76 asignacion: operando • TK_ASIGNACION expresion
   77           | operando • TK_ASIGNACION exp_b

    TK_PUNTO         shift, and go to state 104
    TK_INICIO_ARRAY  shift, and go to state 105
    TK_REF           shift, and go to state 106
    TK_ASIGNACION    shift, and go to state 107


State 45

   10 bloque: declaraciones instrucciones •

    $default  reduce using rule 10 (bloque)


State 46

   69 instrucciones: instruccion • TK_SECUENCIAL instrucciones
   70              | instruccion •

    TK_SECUENCIAL  shift, and go to state 108

    $default  reduce using rule 70 (instrucciones)


State 47

   72 instruccion: asignacion •

    $default  reduce using rule 72 (instruccion)


State 48

   73 instruccion: alternativa •

    $default  reduce using rule 73 (instruccion)


State 49

   74 instruccion: iteracion •

    $default  reduce using rule 74 (instruccion)


State 50

   82 iteracion: it_cota_exp •

    $default  reduce using rule 82 (iteracion)


State 51

   81 iteracion: it_cota_fija •

    $default  reduce using rule 81 (iteracion)


State 52

   75 instruccion: accion_ll •

    $default  reduce using rule 75 (instruccion)


State 53

   11 declaraciones: declaracion_tipo declaraciones •

    $default  reduce using rule 11 (declaraciones)


State 54

   12 declaraciones: declaracion_cte declaraciones •

    $default  reduce using rule 12 (declaraciones)


State 55

   13 declaraciones: declaracion_var declaraciones •

    $default  reduce using rule 13 (declaraciones)


State 56

   87 a_cabecera: TK_IDENTIFICADOR • TK_APERTURA_PARENTESIS d_par_form TK_CIERRE_PARENTESIS TK_SECUENCIAL

    TK_APERTURA_PARENTESIS  shift, and go to state 109


State 57

   85 accion_d: TK_ACCION a_cabecera • bloque TK_FACCION

    TK_TIPO   shift, and go to state 6
    TK_CONST  shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque            go to state 110
    declaraciones     go to state 19
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 58

   88 f_cabecera: TK_IDENTIFICADOR • TK_APERTURA_PARENTESIS lista_d_var TK_CIERRE_PARENTESIS TK_DEV d_tipo TK_SECUENCIAL

    TK_APERTURA_PARENTESIS  shift, and go to state 111


State 59

   86 funcion_d: TK_FUNCION f_cabecera • bloque TK_DEV expresion TK_FFUNCION

    TK_TIPO   shift, and go to state 6
    TK_CONST  shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque            go to state 112
    declaraciones     go to state 19
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 60

   42 decl_ent: TK_ENTRADA • lista_d_var

    TK_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 36 (lista_d_var)

    lista_d_var  go to state 113
    lista_id     go to state 36


State 61

   43 decl_salida: TK_SALIDA • lista_d_var

    TK_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 36 (lista_d_var)

    lista_d_var  go to state 114
    lista_id     go to state 36


State 62

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal • TK_COMENTARIO

    TK_COMENTARIO  shift, and go to state 115


State 63

   39 decl_ent_sal: decl_ent •
   40             | decl_ent • decl_salida

    TK_SALIDA  shift, and go to state 61

    $default  reduce using rule 39 (decl_ent_sal)

    decl_salida  go to state 116


State 64

   41 decl_ent_sal: decl_salida •

    $default  reduce using rule 41 (decl_ent_sal)


State 65

    7 decl_a_f: accion_d decl_a_f •

    $default  reduce using rule 7 (decl_a_f)


State 66

    8 decl_a_f: funcion_d decl_a_f •

    $default  reduce using rule 8 (decl_a_f)


State 67

   22 d_tipo: TK_IDENTIFICADOR •
   64 operando: TK_IDENTIFICADOR •
   95 funcion_ll: TK_IDENTIFICADOR • TK_APERTURA_PARENTESIS l_ll TK_CIERRE_PARENTESIS

    TK_APERTURA_PARENTESIS  shift, and go to state 117

    TK_SECUENCIAL  reduce using rule 22 (d_tipo)
    $default       reduce using rule 64 (operando)


State 68

   20 d_tipo: TK_TUPLA • lista_campos TK_FTUPLA

    TK_IDENTIFICADOR  shift, and go to state 118

    $default  reduce using rule 29 (lista_campos)

    lista_campos  go to state 119


State 69

   21 d_tipo: TK_TABLA • TK_INICIO_ARRAY expresion_t TK_SUBRANGO expresion_t TK_FINAL_ARRAY TK_DE d_tipo

    TK_INICIO_ARRAY  shift, and go to state 120


State 70

   25 d_tipo: TK_TIPOBASE •

    $default  reduce using rule 25 (d_tipo)


State 71

   27 expresion_t: TK_LITERAL_CARACTER •

    $default  reduce using rule 27 (expresion_t)


State 72

   24 d_tipo: TK_REF • d_tipo

    TK_IDENTIFICADOR        shift, and go to state 67
    TK_TUPLA                shift, and go to state 68
    TK_TABLA                shift, and go to state 69
    TK_TIPOBASE             shift, and go to state 70
    TK_LITERAL_CARACTER     shift, and go to state 71
    TK_REF                  shift, and go to state 72
    TK_RESTA                shift, and go to state 73
    TK_LITERAL_NUMERICO     shift, and go to state 74
    TK_APERTURA_PARENTESIS  shift, and go to state 75

    d_tipo       go to state 121
    expresion_t  go to state 77
    expresion    go to state 78
    exp_a        go to state 79
    operando     go to state 80
    funcion_ll   go to state 81


State 73

   55 exp_a: TK_RESTA • exp_a

    TK_IDENTIFICADOR        shift, and go to state 122
    TK_RESTA                shift, and go to state 73
    TK_LITERAL_NUMERICO     shift, and go to state 74
    TK_APERTURA_PARENTESIS  shift, and go to state 75

    exp_a     go to state 123
    operando  go to state 80


State 74

   54 exp_a: TK_LITERAL_NUMERICO •

    $default  reduce using rule 54 (exp_a)


State 75

   52 exp_a: TK_APERTURA_PARENTESIS • exp_a TK_CIERRE_PARENTESIS

    TK_IDENTIFICADOR        shift, and go to state 122
    TK_RESTA                shift, and go to state 73
    TK_LITERAL_NUMERICO     shift, and go to state 74
    TK_APERTURA_PARENTESIS  shift, and go to state 75

    exp_a     go to state 124
    operando  go to state 80


State 76

   18 lista_d_tipo: TK_IDENTIFICADOR TK_CREACION_TIPO d_tipo • TK_SECUENCIAL lista_d_tipo

    TK_SECUENCIAL  shift, and go to state 125


State 77

   23 d_tipo: expresion_t • TK_SUBRANGO expresion_t

    TK_SUBRANGO  shift, and go to state 126


State 78

   26 expresion_t: expresion •

    $default  reduce using rule 26 (expresion_t)


State 79

   44 expresion: exp_a •
   46 exp_a: exp_a • TK_SUMA exp_a
   47      | exp_a • TK_RESTA exp_a
   48      | exp_a • TK_PRODUCTO exp_a
   49      | exp_a • TK_DIVISION exp_a
   50      | exp_a • TK_MODULO exp_a
   51      | exp_a • TK_DIV exp_a

    TK_SUMA      shift, and go to state 127
    TK_RESTA     shift, and go to state 128
    TK_MODULO    shift, and go to state 129
    TK_DIV       shift, and go to state 130
    TK_PRODUCTO  shift, and go to state 131
    TK_DIVISION  shift, and go to state 132

    $default  reduce using rule 44 (expresion)


State 80

   53 exp_a: operando •
   65 operando: operando • TK_PUNTO operando
   66         | operando • TK_INICIO_ARRAY expresion TK_FINAL_ARRAY
   67         | operando • TK_REF

    TK_PUNTO         shift, and go to state 104
    TK_INICIO_ARRAY  shift, and go to state 105
    TK_REF           shift, and go to state 106

    $default  reduce using rule 53 (exp_a)


State 81

   45 expresion: funcion_ll •

    $default  reduce using rule 45 (expresion)


State 82

   15 declaracion_tipo: TK_TIPO lista_d_tipo TK_FTIPO TK_SECUENCIAL •

    $default  reduce using rule 15 (declaracion_tipo)


State 83

   32 lista_d_cte: TK_IDENTIFICADOR TK_CREACION_TIPO TK_LITERAL_CARACTER • TK_SECUENCIAL lista_d_cte

    TK_SECUENCIAL  shift, and go to state 133


State 84

   33 lista_d_cte: TK_IDENTIFICADOR TK_CREACION_TIPO TK_LITERAL_NUMERICO • TK_SECUENCIAL lista_d_cte

    TK_SECUENCIAL  shift, and go to state 134


State 85

   31 lista_d_cte: TK_IDENTIFICADOR TK_CREACION_TIPO TK_LITERAL_CADENA • TK_SECUENCIAL lista_d_cte

    TK_SECUENCIAL  shift, and go to state 135


State 86
